[project]
name = "pyftms"
version = "0.4.14"
description = "Bluetooth Fitness Machine Service async client library."
authors = [
  { name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com" },
]
maintainers = [
  { name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bleak >= 0.21",
    "bleak-retry-connector >= 3.5",
]
keywords = [
    "async",
    "bluetooth",
    "client",
    "fitness",
    "fitshow",
    "ftms",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
"Documentation" = "https://github.com/dudanov/pyftms"
"Home Page" = "https://github.com/dudanov/pyftms"
"Issue Tracker" = "https://github.com/dudanov/pyftms/issues"
"Source Code" = "https://github.com/dudanov/pyftms.git"

[project.optional-dependencies]
docs = [
  "pdoc",
]

[tool.uv]
dev-dependencies = [
  "isort",
  "pytest-emoji",
  "pytest-md",
  "pytest",
  "ruff",
  "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.isort]
line_length = 80
profile = "black"
